tests/script_errors/heredoc_interpolation_escape/error.txt
Error: 
    1 | use std::string;
    2 | let x = string::trim("""
    3 |   { "\z" }
      |      ^^ An unexpected escape code 'z' was found